--- a/knjiga.css
+++ b/knjiga.css
@@ -16,26 +16,24 @@ PRVA SEKCIJA: [ Početna ] (Glavna slika, Navigation-Bar)
   height: 46vw;
   display: flex;
   background-image: url('slike/pozadina.png');
-  background-attachment: local;
-  background-size: 100% 100%;
+  background-size: cover;
 }
 .navigation-bar {
   display: flex;
   justify-content: flex-end;
   list-style-type: none;
-  margin: 0;
-  margin-top: 3.5%;
+  margin-top: 4%;
   margin-left: 60.5%;
   padding: 0;
-  font-size: 2vw;
+  font-size: 1.5vw;
 }
 .navigation-bar li a {
   color:white;
   font-family: "Montserrat";
   font-size: 1.1vw;
-  padding: 0 18px;
+  padding: 0 16px;
   text-decoration: none;
-  letter-spacing: 2.4px;
+  letter-spacing: 2.5px;
 }
 /* 
 DRUGA SEKCIJA: [ Biografija ] (Zatamnjena slika Mime sa šeširom, Biografija-text) 
@@ -60,7 +58,6 @@ DRUGA SEKCIJA: [ Biografija ] (Zatamnjena slika Mime sa šeširom, Biografija-te
   margin-left: 2%;
   margin-top: 6.4%;
   font-size: 1.62vw;
-  font-weight: 600;
   line-height: 2.08vw;
   font-family: "Marion";
   color: black;
@@ -115,7 +112,7 @@ TREĆA SEKCIJA: [ Art-Blok 1 ] (Dve slike: slikarske četkice i palme)
   justify-content: center;
   font-weight: bold;
   font-size: 1.42vw;
-  margin-top: 10px;
+  margin-top: -1%;
 }
 .palme {
   margin-left: 5%;
@@ -361,14 +358,11 @@ MOBILNI
   
 /* Prva Sekcija */
   .navigation-bar {
-    margin: 0;
-    margin-top: 3.7%;
+    margin-top: 4.2%;
     margin-left: 62%;
-    padding: 0;
   }
   .navigation-bar li a {
-    font-size: 1vw;
-    padding: 0 22px;
+    padding: 0 20px;
     letter-spacing: 2.4px;
   }
 }
@@ -385,8 +379,7 @@ MOBILNI
       padding: 0;
     }
     .navigation-bar li a {
-      font-size: 1vw;
-      padding: 0 22px;
+      padding: 0 18px;
       letter-spacing: 2.4px;
     }
   }
@@ -401,7 +394,6 @@ MOBILNI
       margin-left: 67%;
     }
     .navigation-bar li a {
-      font-size: 1vw;
       padding: 0 27px;
       letter-spacing: 2.4px;
     }
