--- a/knjiga.css
+++ b/knjiga.css
@@ -96,17 +96,6 @@ DRUGA SEKCIJA: [ Biografija ] (Zatamnjena slika Mime sa šeširom, Biografija-te
   margin-left: 30.8%;
   text-align: center;
 }
-/* .biografija p {
-  position: absolute;
-  top: -100px;
-  font-size: 14em;
-  z-index: -1;
-  color: rgba(256, 256, 256, 0.95);
-  left:4%;
-  font-family: "Sacramento";
-  letter-spacing: 3px;
-}
-*/
 /* 
 TREĆA SEKCIJA: [ Art-Blok 1 ] (Dve slike: slikarske četkice i palme) 
 ----------------------------------------------------------------------
@@ -253,23 +242,25 @@ PETA SEKCIJA: [ Art-Blok 3 ] (Slika: planine i reka)
 }
 .mima-personal img:last-of-type {
   margin-left: 1.5%;
-  width:20%;
+  width:25%;
   height: auto;
   margin-bottom: -3.2%;
 }
 .mima-text {
   margin-top: 3.2%;
   position: absolute;
-  left: 32%;
+  left: 34%;
   font-size: 1.6vw;
   color: #3d6877;
   line-height: 126%;
 }
 #mima {
+  position: relative;
   font-family: "Sacramento";
   font-size: 2.5vw;
   text-align: right;
-  margin-top: 0;
+  top: 16vw;
+  left: 52vw;
   color: #3d6877;
 }
 /* 
