--- a/knjiga.css
+++ b/knjiga.css
@@ -350,7 +350,7 @@ MOBILNI
   /* Prva Sekcija */
     .navigation-bar {
       margin-top: 4.2%;
-      margin-left: 59%;
+      margin-left: 58%;
     }
     .navigation-bar li a {
       padding: 0 22px;
@@ -379,7 +379,7 @@ MOBILNI
   
   /* Prva Sekcija */
     .navigation-bar {
-      margin-top: 3.7%;
+      margin-top: 4.1%;
       margin-left: 62%;
     }
     .navigation-bar li a {
@@ -414,16 +414,14 @@ MOBILNI
 }
 /* RESPONSIVE [ PRELAZNA FAZA iPad -> Laptop ] (min-width: 900px) and (max-width: 1023px) */
 
-@media screen and (min-width: 900px) and (max-width: 1023px) {
+@media screen and (min-width: 900px) and (max-width: 1023) {
   /* Prva Sekcija */
   .navigation-bar {
     margin-top: 3.4%;
-    margin-left: 62%;
-    font-size: 2.1vw;
+    margin-left: 58%;
   }
   .navigation-bar li a {
-    font-size: 1.2vw;
-    padding: 0 12px;
+    padding: 0 14px;
     letter-spacing: 2.4px;
   }
   /* Druga sekcija */
@@ -445,12 +443,9 @@ MOBILNI
   
   /* Prva Sekcija */
   .navigation-bar {
-    margin-top: 3.4%;
     margin-left: 57%;
-    font-size: 2.3vw;
   }
   .navigation-bar li a {
-    font-size: 1.35vw;
     padding: 0 10px;
     letter-spacing: 2.4px;
   }
