--- a/knjiga.css
+++ b/knjiga.css
@@ -343,8 +343,32 @@ MOBILNI
 }
 
 
-/* RESPONSIVE [ Laptop Large ] (min-width: 1200px) */
 
+@media screen and (max-width: 1023) {
+  /* Prva Sekcija */
+  .navigation-bar {
+    margin-top: 4%;
+    margin-left: 58%;
+  }
+  .navigation-bar li a {
+    padding: 0 20px;
+    letter-spacing: 2.4px;
+  }
+  /* Druga sekcija */
+  .biografija {
+    height: 65vw;
+  }
+  .biografija-text {
+    top: 1%;
+    font-size: 1.1em;
+    line-height: 2.2vw;
+    align-items: center;
+  }
+  .biografija img {
+   margin-top: 0%;
+  }
+}
+/* RESPONSIVE [ Laptop Large ] (min-width: 1200px) */
 @media screen and (min-width: 1200px) {
   
   /* Prva Sekcija */
@@ -392,6 +416,15 @@ MOBILNI
 
 /* Druga Sekcija */
 @media screen and (max-width: 1023px) {
+    /* Prva Sekcija */
+    .navigation-bar {
+      margin-top: 4%;
+      margin-left: 57%;
+    }
+    .navigation-bar li a {
+      padding: 0 18px;
+      letter-spacing: 2.4px;
+    }
   .biografija {
     flex-direction: column-reverse;
     align-items: center;
@@ -414,30 +447,7 @@ MOBILNI
 }
 /* RESPONSIVE [ PRELAZNA FAZA iPad -> Laptop ] (min-width: 900px) and (max-width: 1023px) */
 
-@media screen and (min-width: 900px) and (max-width: 1023) {
-  /* Prva Sekcija */
-  .navigation-bar {
-    margin-top: 3.4%;
-    margin-left: 58%;
-  }
-  .navigation-bar li a {
-    padding: 0 14px;
-    letter-spacing: 2.4px;
-  }
-  /* Druga sekcija */
-  .biografija {
-    height: 65vw;
-  }
-  .biografija-text {
-    top: 1%;
-    font-size: 1.1em;
-    line-height: 2.2vw;
-    align-items: center;
-  }
-  .biografija img {
-   margin-top: 0%;
-  }
-}
+
 /* RESPONSIVE [ iPad Air & iPad Mini ] (min-width: 768px) and (max-width: 899px) */
 @media screen and (min-width: 768px) and (max-width: 899px) {
   
