--- a/knjiga.css
+++ b/knjiga.css
@@ -178,7 +178,7 @@ PETA SEKCIJA: [ Art-Blok 3 ] (Slika: planine i reka)
   width: 85%;
   height: auto;
   margin-top: 7%;
-  margin-left: 7.8%;
+  margin-left: 7.5%;
 }
 .planina p {
   margin-left: 7.8%;
@@ -277,7 +277,7 @@ footer {
 }
 #just-mima {
   font-family:"Sacramento";
-  font-size: 5vw;
+  font-size: 4.3vw;
 }
 #pismo {
   font-family: "Wingdings";
@@ -414,25 +414,50 @@ MOBILNI
 @media screen and (min-width: 768px) and (max-width: 899px) {
   
   /* Prva Sekcija */
+  .mima-arbid {
+    height: 46vw;
+  }
   .navigation-bar {
-    margin-left: 57%;
+    margin-left: 55%;
   }
   .navigation-bar li a {
     padding: 0 10px;
     letter-spacing: 2.4px;
+    font-size: 1.3vw;
   }
   /* Druga sekcija */
   .biografija {
-    height: 68vw;
-  }
-  .biografija-text {
+    position: relative;
     top: 10%;
-    font-size: 1.1em;
-    line-height: 2.4vw;
+    height: 75vw;
+  
+  }
+
+  .biografija-text pre{
+    position: relative;
+    width: 95%;
+    top: 14.7%;
+    font-size: 2.3vw;
+    line-height: 3vw;
     align-items: center;
   }
   .biografija img {
-    margin-top: 5%;
+    margin-top: 12%;
+  }
+  #a {
+    position:absolute;
+    font-size: 1.3em;
+    text-align: center;
+    margin-left: 49.5%;
+    margin-top: 10.5%;
+  }
+  #b {
+    position: absolute;
+    margin-top: 2.3%;
+    font-size: 1.3em;
+    margin-left: enter;
+    margin-left: 49%;
+    text-align: center;
   }
 }
   
