--- a/knjiga.css
+++ b/knjiga.css
@@ -276,19 +276,23 @@ footer {
   color: white;
 }
 #just-mima {
+  position: relative;
+  bottom: -3.2%;
   font-family:"Sacramento";
   font-size: 4.3vw;
 }
 #pismo {
+  position: relative;
   font-family: "Wingdings";
-  font-size: 7vw;
+  font-size: 6.2vw;
   font-weight: 100;
+  top: -6%;
 }
 .contact {
  display: block;
  margin-left: -14.5%;
  font-size: 1.7vw;
- margin-bottom: -2%;
+ margin-bottom: 0%;
 }
 .contact p:first-of-type {
   margin-left: 3px;
