--- a/knjiga.css
+++ b/knjiga.css
@@ -12,7 +12,7 @@ body {
 PRVA SEKCIJA: [ Početna ] (Glavna slika, Navigation-Bar) 
 ----------------------------------------------------------
 */
-.mima-arbid {
+.mimaarbid-naslovna {
   height: 46vw;
   display: flex;
   background-image: url('slike/pozadina.png');
@@ -55,7 +55,7 @@ DRUGA SEKCIJA: [ Biografija ] (Zatamnjena slika Mime sa šeširom, Biografija-te
 .biografija-text {
   background-image: url('slike/mima-prazno.png');
   background-size: 112% 100%;
-  background-position: 40% 0;;
+  background-position: 40% 0;
 }
 .biografija-text pre {
   width: 100%;
@@ -99,26 +99,28 @@ DRUGA SEKCIJA: [ Biografija ] (Zatamnjena slika Mime sa šeširom, Biografija-te
 TREĆA SEKCIJA: [ Art-Blok 1 ] (Dve slike: slikarske četkice i palme) 
 ----------------------------------------------------------------------
 */
-.art-blok1 {
+.umetnički-blok {
   display: flex;
   align-items: flex-end;
-  justify-content: center;
-  font-size: 1.42vw;
   margin-top: -1%;
 }
-.palme {
-  margin-left: 5%;
+.slika-palme {
+  margin-left: 4%;
+  text-align: left;
+  font-size: 1.6vw;
 }
-.palme img {
+
+.slika-palme img {
   width: 78%;
   height: auto;
   margin-top: 50px;
 }
-#četkice {
+
+#slika-četkice {
   position: relative;
   width: 23%;
   height: auto;
- margin-bottom: -1%;
+  margin-bottom: -1%;
 }
 /*
 ČETVRTA SEKCIJA: [ Art-Blok 2 ] (2 slike: palme) 
@@ -169,31 +171,31 @@ TREĆA SEKCIJA: [ Art-Blok 1 ] (Dve slike: slikarske četkice i palme)
 PETA SEKCIJA: [ Art-Blok 3 ] (Slika: planine i reka) 
 ------------------------------------------------------
 */
-.planina {
+.slika-planina {
   background-color: #3d6877;
   margin-top: -45px;
   color: white;
 }
-.planina img {
+.slika-planina img {
   width: 85%;
   height: auto;
   margin-top: 7%;
   margin-left: 7.5%;
 }
-.planina p {
+.slika-planina p {
   margin-left: 7.8%;
   padding-bottom: 2%;
   font-size: 1.42vw;
 }
-.about2 {
+.slika-planina-text {
   padding-bottom: 15px;
 }
-.about2 pre {
+.slika-planina-text pre {
   color: white;
   font-size: 1.53vw;
   font-weight: 500;
   font-family: "Marion";
-  width: 97%;
+  width: 95%;
   text-align: center;
   font-style: italic;
   margin-top: 25px;
@@ -203,21 +205,31 @@ PETA SEKCIJA: [ Art-Blok 3 ] (Slika: planine i reka)
 ŠESTA SEKCIJA: [ Mima-lično ] 
 -------------------------------
 */
-.mima-personal {
-  display: flex;
-  align-items: center;
+.mima-lično {
+  float: left;
+  align-items: flex-end;
+  margin-top: 5%;
   position: static;
+  margin-left: 5%;
 }
-.mima-personal img {
+.mima-lično img {
   width: 24%;
   height: auto;
 }
-.mima-personal img:last-of-type {
+.mima-lično img:last-of-type {
   margin-left: 1.5%;
-  width:20%;
+  width:25%;
   height: auto;
-  margin-bottom: -3%;
+  margin-bottom: -3.2%;
 }
+ .mima-text {
+  margin-top: 3.2%;
+  position: absolute;
+  left: 34%;
+  font-size: 1.6vw;
+  color: #3d6877;
+  line-height: 126%;
+} 
 .mima-text pre {
   position: absolute;
   left: 32%;
@@ -226,32 +238,7 @@ PETA SEKCIJA: [ Art-Blok 3 ] (Slika: planine i reka)
   line-height: 126%;
   font-family: "Marion";
 }
-.mima-personal {
-  float: left;
-  align-items: flex-end;
-  margin-top: 5%;
-  position: static;
-  margin-left: 5%;
-}
-.mima-personal img {
-  width: 24%;
-  height: auto;
-}
-.mima-personal img:last-of-type {
-  margin-left: 1.5%;
-  width:25%;
-  height: auto;
-  margin-bottom: -3.2%;
-}
-.mima-text {
-  margin-top: 3.2%;
-  position: absolute;
-  left: 34%;
-  font-size: 1.6vw;
-  color: #3d6877;
-  line-height: 126%;
-}
-#mima {
+#mima-potpis {
   position: relative;
   font-family: "Sacramento";
   font-size: 2.5vw;
@@ -275,31 +262,31 @@ footer {
   background-color: #222059;
   color: white;
 }
-#just-mima {
+#mimaarbid-text {
   position: relative;
   bottom: -3.2%;
   font-family:"Sacramento";
   font-size: 4.3vw;
 }
-#pismo {
+#pismo-simbol {
   position: relative;
   font-family: "Wingdings";
   font-size: 6.2vw;
   font-weight: 100;
   top: -6%;
 }
-.contact {
+.kontakt-imejl {
  display: block;
  margin-left: -14.5%;
  font-size: 1.7vw;
  margin-bottom: 0%;
 }
-.contact p:first-of-type {
+.kontakt-imejl p:first-of-type {
   margin-left: 3px;
   margin-bottom: -7%;
   font-size: 0.8em;
 }
-.contact p:last-of-type a {
+.kontakt-imejl p:last-of-type a {
   color: white;
   text-decoration: none;
   font-size: 1em;
@@ -314,15 +301,14 @@ footer {
 #facebook a {
   color: white;
   text-decoration: none;
-  padding: 4px;
 }
-#top {
+#povratak-na-vrh-strane {
   position: absolute;
   right: 3px;
   top: -47px;
   opacity: 0.7;
 }
-#top a {
+#povratak-na-vrh-strane a {
   color:#222059;
   padding: 7px 28px;
   border-radius: 5px;
@@ -356,6 +342,7 @@ MOBILNI
       padding: 0 22px;
       letter-spacing: 2.4px;
     }
+    /* Treća sekcija */
   }
 
 /* RESPONSIVE [ Laptop Extra Large] (min-width 1400px) */
@@ -372,57 +359,59 @@ MOBILNI
     }
   }
  
-  /* RESPONSIVE [ Very Large Screen ] (min-width: 2260px) */
+  /* RESPONSIVE [ Very Large Screen ] (min-width: 1900px) */
 
 @media screen and (min-width: 1900px) {
   
   /* Prva Sekcija */
     .navigation-bar {
       margin-left: 62%;
+      font-size: 1.42vw;
     }
     .navigation-bar li a {
       padding: 0 38px;
       letter-spacing: 2.4px;
     }
   }
-
-/* RESPONSIVE [ Prelazak sa Flex-Fow na Flex-Column u drugoj sekciji ] (max-width 1023) */
+  /* RESPONSIVE [ Prelazak sa Flex-Fow na Flex-Column u drugoj sekciji ] (max-width 1023) */
 
 /* Druga Sekcija */
 @media screen and (max-width: 1023px) {
-    /* Prva Sekcija */
-  .biografija {
-    flex-direction: column-reverse;
-    align-items: center;
-    height: 65vw;
-  }
-  .biografija-text {
-    position: relative;
-    width: 100%;
-    height: auto;
-    top: 8%;
-    font-size: 1.1em;
-    line-height: 2.3vw;
-    color: #16191E;
-  }
-  .biografija img {
-    padding-bottom: 40px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+.biografija {
+  flex-direction: column-reverse;
+  align-items: center;
+  height: 65vw;
 }
-/* RESPONSIVE [ PRELAZNA FAZA iPad -> Laptop ] (min-width: 900px) and (max-width: 1023px) */
-
-
+.biografija-text {
+  position: relative;
+  width: 100%;
+  height: auto;
+  top: 8%;
+  font-size: 1.1em;
+  line-height: 2.3vw;
+  color: #16191E;
+}
+.biografija img {
+  padding-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* Treća sekcija*/
+.slika-palme {
+  text-align: center;
+  font-size: 1em;
+  margin-left: -4%;
+}
+}
 /* RESPONSIVE [ iPad Air & iPad Mini ] (min-width: 768px) and (max-width: 899px) */
 @media screen and (min-width: 768px) and (max-width: 899px) {
   
   /* Prva Sekcija */
-  .mima-arbid {
+  .mimaarbid-naslovna {
     height: 46vw;
   }
   .navigation-bar {
-    margin-left: 55%;
+    margin-left: 56%;
   }
   .navigation-bar li a {
     padding: 0 10px;
@@ -434,9 +423,13 @@ MOBILNI
     position: relative;
     top: 10%;
     height: 75vw;
-  
   }
-
+    .biografija-text {
+      background-size: 95% 120%;
+      background-position: 0 -60%;
+      background-repeat: no-repeat;
+    }
+  
   .biografija-text pre{
     position: relative;
     width: 95%;
@@ -446,14 +439,14 @@ MOBILNI
     align-items: center;
   }
   .biografija img {
-    margin-top: 12%;
+    margin-top: 14%;
   }
   #a {
     position:absolute;
     font-size: 1.3em;
     text-align: center;
     margin-left: 49.5%;
-    margin-top: 10.5%;
+    margin-top: 11%;
   }
   #b {
     position: absolute;
@@ -464,5 +457,44 @@ MOBILNI
     text-align: center;
   }
 }
-  
+/* RESPONSIVE [ PRELAZNA FAZA iPad -> Laptop ] (min-width: 900px) and (max-width: 1023px) */
+
+@media screen and (min-width: 900px) and (max-width: 1023px){
+  /* Druga sekcija */
+  .biografija {
+    position: relative;
+    height: 75vw;
+  }
+  .biografija-text {
+    background-size: 95% 120%;
+    background-position: 0 -40%;
+    background-repeat: no-repeat;
+  }
+  .biografija-text pre{
+    position: relative;
+    width: 95%;
+    top: 10%;
+    font-size: 2.1vw;
+    line-height: 2.9vw;
+    align-items: center;
+  }
+  .biografija img {
+    margin-top: 12%;
+  }
+  #a {
+    position:absolute;
+    font-size: 1.3em;
+    text-align: center;
+    margin-left: 49.5%;
+    margin-top: 8%;
+  }
+  #b {
+    position: absolute;
+    margin-top: 0%;
+    font-size: 1.3em;
+    margin-left: enter;
+    margin-left: 49%;
+    text-align: center;
+  }
+}
 
