--- a/knjiga.css
+++ b/knjiga.css
@@ -126,7 +126,7 @@ TREĆA SEKCIJA: [ Art-Blok 1 ] (Dve slike: slikarske četkice i palme)
 ČETVRTA SEKCIJA: [ Art-Blok 2 ] (2 slike: palme) 
 --------------------------------------------------
 */
-.art-blok2 {
+.umetnički-blok2 {
   display:flex;
   background-color: #f2f2f2;
   width: 100%;
@@ -302,13 +302,13 @@ footer {
   color: white;
   text-decoration: none;
 }
-#povratak-na-vrh-strane {
+#vrh-strane {
   position: absolute;
   right: 3px;
   top: -47px;
   opacity: 0.7;
 }
-#povratak-na-vrh-strane a {
+#vrh-strane a {
   color:#222059;
   padding: 7px 28px;
   border-radius: 5px;
