--- a/knjiga.css
+++ b/knjiga.css
@@ -12,8 +12,8 @@ PRVA SEKCIJA: [ Početna ] (Glavna slika, Navigation-Bar)
 ----------------------------------------------------------
 */
 .mimaarbid-naslovna {
-  background-image: url('slike/pozadinatest.png');
-  background-size: 100% 100%;
+ /*  background-image: url('slike/pozadina.png'); */
+ /* background-size: 100% 100%; */
   height: 46vw;
   display: flex;
 }
@@ -51,7 +51,7 @@ DRUGA SEKCIJA: [ Biografija ] (Zatamnjena slika Mime sa šeširom, Biografija-te
   height: auto;
 }
 .biografija-text {
-  background-image: url('slike/mima-prazno.png');
+  /*background-image: url('slike/mima-prazno.png');*/
   background-size: 112% 100%;
   background-position: 40% 0;
 }
