--- a/knjiga.css
+++ b/knjiga.css
@@ -11,7 +11,7 @@ body {
 PRVA SEKCIJA: [ Početna ] (Glavna slika, Navigation-Bar) 
 ---------------------------------------------------------- */
 .mimaarbid-naslovna {
-  background-image: url('slike/pozadina.png'); 
+  background-image: url('slike/pozadinat.png'); 
   background-size: 100% 100%; 
   height: 46vw;
   display: flex;
